[project]
name = "eink-display"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altair>=5.0.0,<6.0.0",
    "pandas>=2.3.3",
    "streamlit>=1.28.0",
    "streamlit-autorefresh>=1.0.1",
    "requests>=2.31.0",
    "gtfs-realtime-bindings>=1.0.0",
    "pytz>=2024.1",
    "langchain-core>=0.2.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=services --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["services"]
omit = ["services/langgraph_agent.py"]

[tool.coverage.report]
show_missing = true
